--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,24 @@
-Flask>=2.0
-Flask-SQLAlchemy>=2.5
-Flask-Migrate>=3.0  # Для управления изменениями схемы БД
-Flask-WTF>=1.0      # Для работы с формами
-Flask-Login>=0.5    # Для аутентификации пользователей
-Werkzeug>=2.0       # Для хеширования паролей (уже зависимость Flask, но укажем явно)
-python-dotenv       # Для загрузки переменных окружения (опционально, но полезно)
-email-validator     # Для валидации email в формах
+alembic==1.16.1
+blinker==1.9.0
+click==8.2.1
+dnspython==2.7.0
+email_validator==2.2.0
+Flask==3.1.1
+Flask-Login==0.6.3
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+greenlet==3.2.2
+gunicorn==23.0.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+Mako==1.3.10
+MarkupSafe==3.0.2
+packaging==25.0
+python-dotenv==1.1.0
+SQLAlchemy==2.0.41
+typing_extensions==4.13.2
+Werkzeug==3.1.3
+WTForms==3.2.1
+WTForms-SQLAlchemy==0.4.2
